--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,9 @@
 	},
 	"dependencies": {
 		"cors": "^2.8.5",
+		"dotenv": "^16.4.5",
 		"express": "^4.19.2",
+		"ioredis": "^5.4.1",
 		"socket.io": "^4.7.5"
 	},
 	"devDependencies": {
