--- a/cli/package.json
+++ b/cli/package.json
@@ -40,6 +40,7 @@
 		"@inquirer/prompts": "^5.1.0",
 		"commander": "^2.20.0",
 		"dotenv": "^16.4.5",
+		"enquirer": "^2.4.1",
 		"generate-unique-id": "^2.0.3",
 		"picocolors": "^1.0.1",
 		"react": "^18.3.1",
