--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,9 @@
 		"dotenv": "^16.4.5",
 		"express": "^4.19.2",
 		"ioredis": "^5.4.1",
-		"socket.io": "^4.7.5"
+		"socket.io": "^4.7.5",
+		"util": "^0.12.5",
+		"winston": "^3.13.0"
 	},
 	"devDependencies": {
 		"@types/express": "^4.17.21",
