--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
 		"dotenv": "^16.4.5",
 		"express": "^4.19.2",
 		"ioredis": "^5.4.1",
+		"nanoid": "^5.0.7",
 		"socket.io": "^4.7.5",
 		"util": "^0.12.5",
 		"winston": "^3.13.0"
