--- a/cli/package.json
+++ b/cli/package.json
@@ -25,20 +25,22 @@
 		"dev": "ts-node ./src/index.ts",
 		"clean": "rimraf ./dist/",
 		"build": "tsup src/index.ts --format cjs,esm --dts --minify",
-		"release": "pnpm build && pnpm changeset publish"
+		"release": "pnpm build && pnpm changeset publish",
+		"format": "prettier --write \"src/**/*.ts\""
 	},
 	"devDependencies": {
 		"@changesets/cli": "^2.27.5",
 		"@types/node": "^20.14.2",
 		"@types/terminal-kit": "^2.5.6",
 		"pkg": "^5.8.1",
+		"prettier": "^3.3.3",
 		"rimraf": "^5.0.7",
 		"ts-node": "^10.9.2",
 		"typescript": "^5.5.2"
 	},
 	"dependencies": {
 		"@inquirer/prompts": "^5.1.0",
-		"commander": "^2.20.0",
+		"commander": "^2.20.3",
 		"dotenv": "^16.4.5",
 		"enquirer": "^2.4.1",
 		"generate-unique-id": "^2.0.3",
@@ -46,6 +48,7 @@
 		"react": "^18.3.1",
 		"socket.io-client": "^4.7.5",
 		"terminal-kit": "^3.1.1",
-		"tsup": "^8.1.0"
+		"tsup": "^8.1.0",
+		"yargs": "^17.7.2"
 	}
 }
