--- a/cli/tsconfig.json
+++ b/cli/tsconfig.json
@@ -5,6 +5,7 @@
 		"module": "commonjs",
 		"target": "es6",
 		"esModuleInterop": true,
-		"moduleResolution": "Node"
+		"moduleResolution": "Node",
+		"resolveJsonModule": true
 	}
 }
